fixed cutoff issue

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  margin-top: 30px;
 }
 
 .navbar-container {
@@ -13,7 +14,7 @@
   align-items: center;
   width: 100%;
   max-width: 1200px;
-  padding: 0 20px;
+  padding: 0px 20px;
 }
 
 .navbar-logo {
